# auto-findGoal

./: .gitignore  README.md
src/can_motor_driver/: CMakeLists.txt  package.xml
src/can_motor_driver/include/can_motor_driver/: base_motor.hpp  c610.hpp  c610_controller.hpp  dm_motor.hpp  omni_controller.hpp  pid.hpp  turret_controller.hpp  usb_can.hpp
src/can_motor_driver/launch/: motor_launch.py  realsense_yolo.launch.py
src/can_motor_driver/src/: advanced_yolo_detector.py  base_motor.cpp  c610.cpp  c610_controller.cpp  c610_node.cpp  dm_motor.cpp  main_node.cpp  motor_node.cpp  omni_controller.cpp  pid.cpp  turret_controller.cpp  usb_can.cpp  yolo_goal_detector.py
src/web_ui_server/: package.xml  setup.cfg  setup.py
src/web_ui_server/certs/: 192.168.2.200+2-key.pem  192.168.2.200+2.pem  192.168.2.8+2-key.pem  192.168.2.8+2.pem
src/web_ui_server/launch/: robot.launch.py  web_ui.launch.py
src/web_ui_server/web/: control.html  gunner.html  index.html  rootCA.pem
src/web_ui_server/web/public/: manifest.json
src/web_ui_server/web/src/: gamepad.js  main.js  rosbridge.js  style.css
src/web_ui_server/web_ui_server/: server_node.py
web_ui/: driver.html  gunner.html
